--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,12 @@
   </head>
   <body>
     <div class="container">
-      <div class="container__content"></div>
+      <div class="container__content">
+        <h1 class="container__content__title">Meu Aniversário será em:</h1>
+        <div class="container__content__count" id="contador"></div>
+      </div>
     </div>
+
+    <script src="scripts/main.js"></script>
   </body>
 </html>
